js262/test/language/expressions/object/method-definition/early-errors-object-method-await-in-formals-default.js


/*---
author: Brian Terlson <brian.terlson@microsoft.com>
esid: pending
description: It is a SyntaxError if FormalParameters' default expressions contains await
negative:
  phase: parse
  type: SyntaxError
features: [async-functions]
---*/

$DONOTEVALUATE();
({
  async foo (x = await) {  }
})

